# sqlglot-ts

./: .gitignore  .gitmodules  .oxfmtrc.json  .oxlintrc.json  LICENSE  README.md  biome.json  justfile  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
.github/workflows/: ci.yml  main.yml
examples/: ast.test.ts  builder.test.mjs  builder.test.ts  dialects.test.mjs  parse.test.mjs  serde.test.mjs  transpile.test.ts  tsconfig.json
src/: dialect.ts  errors.ts  expression-base.ts  expressions.generated.ts  expressions.ts  generator.ts  index.ts  parser.ts  scope.ts  serde.ts  time.ts  tokens.ts  transforms.ts  trie.ts
src/dialects/: athena.ts  bigquery.ts  clickhouse.ts  databricks.ts  doris.ts  dremio.ts  drill.ts  druid.ts  duckdb.ts  dune.ts  exasol.ts  fabric.ts  hive.ts  index.ts  materialize.ts  mysql.ts  oracle.ts  postgres.ts  presto.ts  prql.ts  redshift.ts  risingwave.ts  singlestore.ts  snowflake.ts  solr.ts  spark.ts  sqlite.ts  starrocks.ts  tableau.ts  teradata.ts  trino.ts  tsql.ts
src/optimizer/: annotate_types.ts
tools/: api_surface.py  api_surface_README.md  check_codegen_freshness.mjs  conftest.py  fake_sqlglot.py  generate.py  packaging_test.sh  packaging_types_test.sh  pyproject.toml  release.sh  ts_bridge.js  validator.py
tools/checks/: api_surface.test.mjs  api_surface_python.json  fluent_api_architecture_test.mjs  packaging.test.mjs
tools/codegen/: api_surface_snapshot.py  check_freshness.mjs  generate.py
tools/compat/: __init__.py  api.py  bridge.py  conftest.py  errors.py  proxy.py  ratchet.json  ratchet.py  registration.py  time_shim.py  tokens.py  ts_bridge.mjs  validator.py
tools/python/: api_surface.py  api_surface_README.md  api_surface_excludes.json  conftest.py  fake_sqlglot.py  generate.py  pyproject.toml  ts_bridge.js
tools/release/: release.sh
tools/smoke/: check_codegen_freshness.mjs  fluent_api_architecture_test.mjs  packaging_test.sh  packaging_types_test.sh
tools/tests/: test_compat_modules.py
