[project]
name = "sqlglot-ts-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["pytz", "pytest>=8.0", "pytest-subtests>=0.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "../../sqlglot/tests/dialects",
    "../../sqlglot/tests/test_build.py",
    "../../sqlglot/tests/test_expressions.py",
]
addopts = "-v --tb=short -p conftest --import-mode=importlib -k 'not test_lazy_load'"
